bpo-38236: Dump path config at first import error

Python now dumps path configuration if it fails to import the Python
codecs of the filesystem and stdio encodings.